package smartHomeDDD.ddd;

public interface Value {

}
